--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost:3306/springdrogaria?useTimeZone=true&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=ROOT
+
+spring.jpa.hibernate.ddl-auto=create
