--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/springdrogaria?useTimeZone=tru
 spring.datasource.username=root
 spring.datasource.password=ROOT
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=validate
 
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
